impl. ProjectAdd: test version;
