# doc/sup_adm_service.swagger.json
@@ -299,6 +299,38 @@
         ]
       }
     },
+    "/data/projects/add": {
+      "post": {
+        "operationId": "YourAdminService_ProjectAdd",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoProject"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "params",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protoProjectAddRequestParams"
+            }
+          }
+        ],
+        "tags": [
+          "YourAdminService"
+        ]
+      }
+    },
     "/data/skills": {
       "get": {
         "operationId": "YourAdminService_SkillsList",
@@ -829,6 +861,43 @@
         }
       }
     },
+    "protoProjectAddRequestParams": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "title": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "teamleadId": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "skillsIds": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          }
+        },
+        "userIds": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          }
+        },
+        "experience": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
     "protoSkill": {
       "type": "object",
       "properties": {
@@ -903,10 +972,10 @@
         "middleName": {
           "type": "string"
         },
-        "avatarUri": {
+        "avatarUrl": {
           "type": "string"
         },
-        "curentProjectId": {
+        "currentProjectId": {
           "type": "integer",
           "format": "int64"
         },
