# transport/lib_handlers.go
@@ -73,8 +73,8 @@ func (gp *gatewayProxy) DataLib(ctx context.Context, request *emptypb.Empty) (*p
 				FirstName:           users[i].FirstName,
 				LastName:            users[i].LastName,
 				MiddleName:          users[i].MiddleName,
-				AvatarUri:           users[i].AvaterURL,
-				CurentProjectId:     users[i].CurrentProjectId,
+				AvatarUrl:           users[i].AvaterURL,
+				CurrentProjectId:    users[i].CurrentProjectId,
 				CompletedProjectIds: users[i].CompletedProjectsIds,
 				SkillsIds:           users[i].SkillsIds,
 				Role:                users[i].Role,
